fixed the overflow hidden on body while clicking on the navtoggle

--- a/scss/_navLBA.scss
+++ b/scss/_navLBA.scss
@@ -1,4 +1,5 @@
 header{
+
     position: fixed;
     top: 0;
     left: 0;
@@ -59,7 +60,7 @@ header{
         }
     }
     input{
-        //position: absolute; 
+        display: none;
         &:checked{
             ~.header-right{
                 .navToggle{
