--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,13 +41,6 @@ section{
     padding: 20px 15px;
 }
 
-
-
-//Header
-.navToggle{
-    
-}
-
 //HOME
 .home{
 
